updated issue causing firefox browser on mobile to repeat characters related to #196

--- a/src/scss/blocks/_form.scss
+++ b/src/scss/blocks/_form.scss
@@ -40,6 +40,7 @@
             letter-spacing: 0.3rem;
             padding: 0.25rem 0.5rem;
             text-align: center;
+            text-transform: uppercase;
 
             &::-webkit-input-placeholder {
                 color: $grey;
